--- a/course_work_number_one/SCWorks.cls
+++ b/course_work_number_one/SCWorks.cls
@@ -165,8 +165,8 @@
 % Table of contents
 % --------------------------------------------------------------------------%
 \renewcommand{\tableofcontents}%
-{\structformat\section*{\uppercase{\cyr\CYRS\cyro\cyrd\cyre\cyrr\cyrzh\cyra%
-\cyrn\cyri\cyre}}\@starttoc{toc}
+{\structformat\section*{\uppercase{\cyr\CYRS\CYRO\CYRD\CYRE\CYRR\CYRZH\CYRA%
+\CYRN\CYRI\CYRE}}\@starttoc{toc}
 \thispagestyle{empty}}
 
 \renewcommand{\@dotsep}{1.5}
@@ -311,8 +311,9 @@
 \CYRV\CYRERY\CYRS\CYRSH\CYRE\CYRG\CYRO\ % vishego
 %\CYRP\CYRR\CYRO\CYRF\CYRE\CYRS\CYRS\CYRI\CYRO\CYRN\CYRA\CYRL\CYRSFTSN\CYRN\CYRO\CYRG\CYRO\ % professionalnogo
 \CYRO\CYRB\CYRR\CYRA\CYRZ\CYRO\CYRV\CYRA\CYRN\CYRI\CYRYA\\ % obrazovania
-<<\CYRS\CYRA\CYRR\CYRA\CYRT\CYRO\CYRV\CYRS\CYRK\CYRI\CYRISHRT\ % saratovskii
-\CYRN\CYRA\CYRU\CYRCH\CYRN\CYRO-\CYRI\CYRS\CYRS\CYRL\CYRE\CYRD\CYRO\CYRV\CYRA\CYRT\CYRE\CYRL\CYRSFTSN\CYRS\CYRK\CYRI\CYRISHRT\
+<<\CYRS\CYRA\CYRR\CYRA\CYRT\CYRO\CYRV\CYRS\CYRK\CYRI\CYRISHRT\ \CYRN\CYRA\CYRC\CYRI\CYRO\CYRN\CYRA\CYRL\CYRSFTSN\CYRN\CYRERY\CYRISHRT \
+\CYRI\CYRS\CYRS\CYRL\CYRE\CYRD\CYRO\CYRV\CYRA\CYRT\CYRE\CYRL\CYRSFTSN\CYRS\CYRK\CYRI\CYRISHRT\
+% saratovskii %\CYRN\CYRA\CYRU\CYRCH\CYRN\CYRO- 
 \CYRG\CYRO\CYRS\CYRU\CYRD\CYRA\CYRR\CYRS\CYRT\CYRV\CYRE\CYRN\CYRN\CYRERY\CYRISHRT\ % gosudarstvennii
 \CYRU\CYRN\CYRI\CYRV\CYRE\CYRR\CYRS\CYRI\CYRT\CYRE\CYRT\\ % universitet
 \CYRI\CYRM\CYRE\CYRN\CYRI\ \CYRN.\CYRG. \CYRCH\CYRE\CYRR\CYRN\CYRERY%
