--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -96,7 +96,7 @@ $$
 \tl
 Если переменные квадратичной формы обозначить $x_1,...,x_n$, то общий вид квадратичной формы от этих переменных будет иметь вид:
 \\
-$$f(x_1,...x_n)=\dsum{1 \le j \le k \le n}{f_{jk}x_jx_k} = \udsum{j=1}{n}{}\udsum{k=1}{n}{a_{jk}x_{j}x{k}},\eqno(1.1)$$
+$$f(x_1,...x_n)=\dsum{1 \le j \le k \le n}{f_{jk}x_jx_k} = \udsum{j=1}{n}{}\udsum{k=1}{n}{a_{jk}x_{j}x_{k}},\eqno(1.1)$$
 \\ \tab где $a_{jk} = f_{jk}$ некоторые числа, называемые коэффициентами.
 \\
 Не ограничивая общности, можно считать, что $a_{jk} = a_{kj}$. Квадратичная форма называется действительной или комплексной в зависимости от того, являются ли ее коэффициенты соответственно действительными или комплексными числами. Будем рассматривать действительные квадратичные формы.
@@ -213,7 +213,7 @@ y_{n}
 $$ \lambda_1y_1^2+\lambda_2y_2^2+\dots + \lambda_ny_n^2$$
 при помощи преобразования переменных с ортогональной матрицей. При этом коэффициенты $ \lambda_k $ канонического вида являются корнями характеристического многочлена матрицы $A$ каждый из которых взят столько раз, какова его кратность. 
 
-Из теоремы 4 можно указать практическую схему для отыскания ортогонального преобразования переменных, в результате которого квадратичная форма принимает канонический вид, или, что то же, ее матрица заменяется на диагональную. 
+Можно указать практическую схему для отыскания ортогонального преобразования переменных, в результате которого квадратичная форма принимает канонический вид, или, что то же, ее матрица заменяется на диагональную. 
 
 1-й шаг. Для данной квадратичной формы строим ее симметрическую матрицу $A$.
 
