[practice 2nd] add three sections

--- a/summer_practice_2nd/main.tex
+++ b/summer_practice_2nd/main.tex
@@ -178,18 +178,106 @@ $$A.B=\begin{pmatrix}
 \end{itemize}
 
 \newpage
+\section{Функции математического анализа}
+\begin{itemize}
+\item[1.] Найти пределы выражений: № 746, № 761, № 776 [Из сборника задач по высшей математике, Минорский В. П.]. Для нахождения предела воспользуемся командой \textbf{limit(функция, переменная, точка)}.
 
+№ 746\\
+Найти предел:
+$$\lim_{x \to \infty}\frac{2x^2-1}{3x^2-4x}$$
+Запишем функцию:
+$$F=\frac{2x^2-1}{3x^2-4x}$$
+
+\texttt{F: (2*x\^{}2-1)/(3*x\^{}2-4*x);}\\
+\texttt{limit(F, x, $\infty$)}; \\ 
+Ответ: $\frac{2}{3}$
+
+№ 761\\
+Найти предел:
+$$\lim_{x \to 7}\frac{2-\sqrt{x-3}}{x^2-49}$$
+Запишем функцию:
+$$F=\frac{2-\sqrt{x-3}}{x^2-49}$$
+
+\texttt{F: (2-sqrt(x-3))/(x\^{}2-49);}\\
+\texttt{limit(F, x, 7)}; \\ 
+Ответ: $-\frac{1}{56}$
+
+№ 776\\
+Найти предел:
+$$\lim_{x \to 0}\frac{2x\sin{x}}{\sec{x}-1}$$
+Запишем функцию:
+$$F=\frac{2x\sin{x}}{\sec{x}-1}$$
+
+\texttt{F: (2*x*sin(x))/(sec(x)-1);}\\
+\texttt{limit(F, x, 0)}; \\ 
+Ответ: $4$
+
+\item[2.] Вычислить производные: № 886, № 901 [Из сборника задач по высшей математике, Минорский В. П.]. Для вычисления производной воспользуемся командой \textbf{diff(y(x), x)}, где y(x) - функция, x - переменная, по которой дифференцируем.
+
+№ 886\\
+Найти производную функции:\\
+1) Дана функция: $$ y = \frac{1}{(1+\cos{4x})^5} $$
+\texttt{y(x):=1/(1+cos(4*x))\^{}5;}\\
+\texttt{diff(y(x),x);}\\
+Ответ:
+
+%%%%%%%%%%%%%%%
+
+2) Дана функция: $$ s = \sqrt{\frac{t}{2} - sin{\frac{t}{2}}} $$
+\texttt{s(t):=sqrt(t/2-sin(t/2))}\\
+\texttt{diff(s(t),t);}\\
+Ответ:
+
+%%%%%%%%%%%%%%%
+\item[3.] Найти интегралы: № 1547, № 1562, № 1577 [Из сборника задач по высшей математике, Минорский В. П.]. Для нахождения интеграла воспользуемся командой \textbf{integrate(y, x)}, где y - функция, x - переменная, по которой дифференцируем.
+
+№ 1547\\
+Найти интеграл:
+$$\int\frac{\sin{x}dx}{b^2+\cos^2{x}}$$
+
+\texttt{integrate(sin(x)/(b\^{}2+cos\^{}2(x)),x);}\\
+
+Ответ: 
+
+%%%%%%%%%%%%%%%
+
+№ 1562\\
+Найти интеграл:
+$$\int\frac{dx}{\sqrt{x+a}+\sqrt{x}}$$
+
+\texttt{integrate(1/(sqrt(x+a)+sqrt(x)),x);}\\
+
+Ответ: 
+
+%%%%%%%%%%%%%%%
+
+№ 1577\\
+Найти интеграл:
+$$\int e^{-\sqrt{x}}dx$$
+
+\texttt{integrate(e\^{}sqrt(x),x);}\\
+
+Ответ: 
+
+\item[4.] Вычислить площадь, ограниченную линиями: № 1637, № 1652, № 1667 [Из сборника задач по высшей математике, Минорский В. П.]. Для вычисления площади воспользуемся определенным интегралом.
+
+
+\item[5.] Определить объем тела, образованного вращением фигуры, ограниченной линиями:\\
+
+№ 1681 \\
+$y = \sin{x}$(одной полуволной), $y=0$ вокруг оси $Ox$.
+
+\end{itemize}
 
 \section*{СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
 \addcontentsline{toc}{section}{СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
 \begin{itemize}
 \item[1] Ильин В. А., Позняк Э. Г. Линейная алгебра. М. : Наука, 1984. 294с.
-\item[2] Виноградов И. М. Математическая энциклопедия. М.: Советская энциклопедия. 1977—1985.
-\item[3] Хромов А. П. Конечномерные возмущения вольтерровых операторов: дис. ... д-ра физ.-мат. наук. Новосибирск, 1973. 242с.
-\item[4] Фомин А. Е. О компонентах групп // Исследования по теории групп: сб. науч. тр. Свердловск, 1984. 136–148c.
+\item[2] Берсенев С. М., Иванов И. О. О вычислительных схемах метода регуляризации  // Журн. вычисл. мат. и мат. физ. 1984. Т. 24, № 9. 1402–1405c. 
+\item[3] Фомин А. Е. О компонентах групп // Исследования по теории групп: сб. науч. тр. Свердловск, 1984. 136–148c.
+\item[4] Хромов А. П. Конечномерные возмущения вольтерровых операторов: дис. ... д-ра физ.-мат. наук. Новосибирск, 1973. 242с.
 \item[5] Губина Т. Н., Андропова Е.В. Решение дифференциальных уравнений в системе компьютерной математике Maxima: Учебное пособие. Елец. 2009. 99с.
-\item[6] Берсенев С. М., Иванов И. О. О вычислительных схемах метода регуляризации  // Журн. вычисл. мат. и мат. физ. 1984. Т. 24, № 9. 1402–1405c. 
-\item[7] Стахин Н. А. Основы работы с системой аналитических вычислений Maxima: Учебное пособие. М. 2008. 86с.
-
+\item[6] Стахин Н. А. Основы работы с системой аналитических вычислений Maxima: Учебное пособие. М. 2008. 86с.
+\item[7] Виноградов И. М. Математическая энциклопедия. М.: Советская энциклопедия. 1977—1985.
 \end{itemize}
 \end{document}
