[practice 2nd] add answers

--- a/summer_practice_2nd/main.tex
+++ b/summer_practice_2nd/main.tex
@@ -219,7 +219,7 @@ $$F=\frac{2x\sin{x}}{\sec{x}-1}$$
 1) Дана функция: $$ y = \frac{1}{(1+\cos{4x})^5} $$
 \texttt{y(x):=1/(1+cos(4*x))\^{}5;}\\
 \texttt{diff(y(x),x);}\\
-Ответ:
+Ответ: \[\frac{20\sin{(4x)}}{{{\left( 1+\cos{(4x)}\right) }^{6}}}\]
 
 %%%%%%%%%%%%%%%
 
@@ -227,7 +227,7 @@ $$F=\frac{2x\sin{x}}{\sec{x}-1}$$
 \texttt{s(t):=sqrt(t/2-sin(t/2))}\\
 \texttt{diff(s(t),t);}\\
 Ответ:
-
+\[\frac{\frac{1}{2}-\frac{\cos{\left( \frac{t}{2}\right) }}{2}}{2\sqrt{\frac{t}{2}-\sin{\left( \frac{t}{2}\right) }}}\]
 %%%%%%%%%%%%%%%
 \item[3.] Найти интегралы: № 1547, № 1562, № 1577 [Из сборника задач по высшей математике, Минорский В. П.]. Для нахождения интеграла воспользуемся командой \textbf{integrate(y, x)}, где y - функция, x - переменная, по которой дифференцируем.
 
@@ -237,7 +237,7 @@ $$\int\frac{\sin{x}dx}{b^2+\cos^2{x}}$$
 
 \texttt{integrate(sin(x)/(b\^{}2+cos\^{}2(x)),x);}\\
 
-Ответ: 
+Ответ: \[-\frac{\operatorname{atan}\left( \frac{\cos{(x)}}{b}\right) }{b}\]
 
 %%%%%%%%%%%%%%%
 
@@ -247,7 +247,8 @@ $$\int\frac{dx}{\sqrt{x+a}+\sqrt{x}}$$
 
 \texttt{integrate(1/(sqrt(x+a)+sqrt(x)),x);}\\
 
-Ответ: 
+Ответ: данный интеграл в системе wxMaxima не берётся.
+Посчитаем через wolfram alpha: $$\frac{2(-x^{3/2}+a\sqrt{a+x}+x\sqrt{a+x})}{3a}$$
 
 %%%%%%%%%%%%%%%
 
@@ -257,7 +258,9 @@ $$\int e^{-\sqrt{x}}dx$$
 
 \texttt{integrate(e\^{}sqrt(x),x);}\\
 
-Ответ: 
+Ответ: \[-\frac{\left( 2+2\log{(e)}\,\sqrt{x}\right) \,{{\%{}e}^{-\log{(e)}\,\sqrt{x}}}}{{{\log{(e)}}^{2}}}\]
+
+Ответ в системе wolfram: $-2e^{-\sqrt{x}}(\sqrt{x}+1)$
 
 \item[4.] Вычислить площадь, ограниченную линиями: № 1637, № 1652, № 1667 [Из сборника задач по высшей математике, Минорский В. П.]. Для вычисления площади воспользуемся определенным интегралом.
 
