[practice 2nd] added DE section

--- a/summer_practice_2nd/main.tex
+++ b/summer_practice_2nd/main.tex
@@ -272,6 +272,120 @@ $y = \sin{x}$(одной полуволной), $y=0$ вокруг оси $Ox$.
 
 \end{itemize}
 
+
+\newpage
+\section{Решение дифференциальных уравнений}
+\begin{itemize}
+\item[1.] Найти решение дифференциальных уравнений. Для того, чтобы решить дифференциальное уравнение, используем команду\\
+\textbf{ode2(F,y(x),x)}, где F - наша функция, y(x) - зависимая переменная, x - независимая переменная.\\
+
+Пример 1. Запишем уравнение как $$(2x+y)dy = ydx +4ln(y)dy$$\\
+Перепишем в виде: $$(2x+4-4ln(y))\frac{dy}{dx}=y$$
+Так как $\frac{dy}{dx} = y'$, то наше уравнение запишется в виде:
+$$(2x+4-4ln(y))y'=y$$
+\texttt{F: (2*x+y-4*log(y))*'diff(y(x),x)=y}\\
+\texttt{ode2(F,y(x),x);}\\
+Ответ: \\
+%%%%%%%%%%%%%%%
+Пример 2. Запишем уравнение как F: $y^{IV}+2y''+y=0$\\
+\texttt{F: 'diff(y(x),x,4)+2*'diff(y(x),x,2)+y=0;}\\
+\texttt{ode2(F,y(x),x);}\\
+Ответ: \\
+%%%%%%%%%%%%%%%
+Пример 3. Запишем уравнение как F: $y''+y=x\sin(x) $\\
+\texttt{F: 'diff(y(x),x,2)+'diff(y(x),x)=x*sin(x);}\\
+\texttt{ode2(F,y(x),x);}\\
+Ответ: 
+%%%%%%%%%%%%%%% 
+
+\item[2] Найти решение уравнения, удовлетворяющее указанным начальным условиям. Для нахождения решения используем команду \\ \textbf{ic2(ode2(F, y, x), начальные условия)}, где F - наша функция, y - зависимая переменная, x - независимая переменная.
+
+Пример. Запишем уравнение как:
+$$y''+y=2x-\pi, \;\; y(0)=0, \;\; y(\pi)=0$$
+\texttt{F: 'diff(y,x,2)+y=2x-\%pi;}\\
+\texttt{ic2(ode2(F, y, x), x=0, y=0, x=\%pi, y=0);}\\
+Ответ: 
+%%%%%%%%%%%%%%%
+
+\item[5.] Найти решение системы дифференциальных уравнений и исследовать особые точки. Начертить на фазовой плоскости траектории системы.\\
+\(\left\{
+\begin{array}{l}
+x'=3x-2y \\
+y'=4y-6x
+\end{array} \right. \)\\
+Запишем первое уравнение как \(F1\), а второе как \(F2\)\\
+\texttt{F1: 3*x(t)=diff(x(t),t)+2*y(t);}\\
+%вставить%
+\\
+\texttt{F2: 4*y(t)=diff(y(t),t)-6*x(t);}\\
+%вставить%
+%%%%%%%%%%%%%%%
+Для решения системы дифференциальных уравнений воспользуемся выражением:\\
+\texttt{desolve([f1,f2],[x(t),y(t)]);}\\
+%вставить%\\\\
+%%%%%%%%%%%%%%%
+Составим характеристическое уравнение и найдем его корни. Для этого зададим матрицу.\\
+\texttt{matrix([3-lambda,-2], [-6,4-lambda]);}\\
+%вставить%\\
+%%%%%%%%%%%%%%%}
+Вычислим определитель матрицы и найдем собственные значения матрицы.\\
+\texttt{determinant(\%);}\\
+%вставить%\\
+%%%%%%%%%%%%%%%
+Задаем команду для построения поля направлений:\\
+\texttt{load("plotdf")\$;}\\
+\texttt{plotdf([3*x-2*y, 4*y-6*x],[x,y],}
+
+\texttt{[tstep,0.01],[x,-10,10],[y,-10,10],}
+
+\texttt{[direction,forward],[nsteps,300])\$;
+\begin{figure}[h]
+%\includegraphics[width=0.5\textwidth]{trac}
+\end{figure}\\}
+Точка покоя системы - точка НАЙТИ. Так как произведение корней характеристического уравнения \(<0\) \((lambda_{1}\cdot lambda_{2}<0)\), то положение равновесия системы - седло (рисунок).\\
+\\
+\\
+\\
+\item[6.] Реализация метода сеток для дифференциальных уравнений в частных производных.\\
+Пример 1. \\
+\( \left\{
+\begin{array}{l}
+u_{xx}=\dfrac{1}{a^{2}}u_{tt}, \ 0\leq x\leq m, \ 0\leq y\leq n \\
+u(x,0)=\sin(\pi x/50)\cos(\pi x), \ u_{t}(x,0)=0 \\
+u(0,t)=u(m,t)=0.
+\end{array} \right. \) \\
+Вводим сетку: m=100 , n=200 , h=1 . Создаем нулевой массив значений \(U(i,j)\) размера m x n.\\
+\texttt{\$m:42\$n:30\$ h:1\$;}
+
+\texttt{for i:1 thru m do for j:1 thru n do}
+
+\texttt{(arraymake (u,[i,j]), u[i,j]:0)\$;}\\
+Задаем значения a=1, k=0,01.\\
+\texttt{a:1\$k:0.01\$;}\\
+Заполняем первую и вторую строки массива U начальными условиями \(u(x,0)=\sin(\pi x/9)\cos(\pi x), \ u_{t}(x,0)=0\) (нулевой начальной скорости соответствует совпадение значений (смещений) в первом и втором столбцах).\\
+\texttt{for j:1 thru n do}\\
+\texttt{(u[1,j]:sin(\%pi*j/9)*cos(\%pi*j), u[2,j]:u[1,j])\$;}\\
+Заполняем первый и последний столбец массива U граничными условиями \(u(0,t)=u(m,t)=0\) (на концах струны смещение равно нулю в любой момент времени).\\
+\texttt{for i:1 thru m do (u[i,1]:0, u[i,n]:0)\$;}\\
+Находим решение, используя разностную схему\\
+\(u_{i+1,j}=\dfrac{a^2 k^2}{h^2}[u_{i,j+1}-2u_{i,j}+u_{i,j-1}]+2u_{i,j}-u_{i-1,j}.\)\\
+\texttt{for i:2 thru m-1 do for j:2 thru n-1 do}\\
+\texttt{u[i+1,j]:float((a*k/h)\^{}2*(u[i,j+1]-}\\
+\texttt{2*u[i,j]+u[i,j-1])+2*u[i,j]-u[i-1,j]),numer\$;}\\
+Для вывода полученного решения в виде поверхности преобразуем наш массив U в функцию двух переменных:\\
+\texttt{f(x,y):=float(u[round(x),round(y)])\$;}\\
+Теперь выполняем построение:\\
+\texttt{plot3d(f, [x,1,m], [y,1,n], [plot\_format, gnuplot])\$;}
+\begin{figure}[h]
+%\includegraphics[width=0.7\textwidth]{setka}
+\end{figure}\\
+\end{itemize}
+
+\section*{ЗАКЛЮЧЕНИЕ}
+\addcontentsline{toc}{section}{ЗАКЛЮЧЕНИЕ}
+will be added 
+
+
 \section*{СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
 \addcontentsline{toc}{section}{СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
 \begin{itemize}
