--- a/summer_practice_2nd/main.tex
+++ b/summer_practice_2nd/main.tex
@@ -283,66 +283,142 @@ $y = \sin{x}$(одной полуволной), $y=0$ вокруг оси $Ox$.
 Перепишем в виде: $$(2x+4-4ln(y))\frac{dy}{dx}=y$$
 Так как $\frac{dy}{dx} = y'$, то наше уравнение запишется в виде:
 $$(2x+4-4ln(y))y'=y$$
-\texttt{F: (2*x+y-4*log(y))*'diff(y(x),x)=y}\\
+\texttt{F: (2*x+y-4*log(y))*'diff(y(x),x)=y;}\\
 \texttt{ode2(F,y(x),x);}\\
-Ответ: \\
+Ответ: \[\operatorname{y}(x)=\frac{y\,\log{\left( 4\log{(y)}-y-2x\right) }}{2}+\mathit{\%{}c}\]
+\\
 %%%%%%%%%%%%%%%
 Пример 2. Запишем уравнение как F: $y^{IV}+2y''+y=0$\\
 \texttt{F: 'diff(y(x),x,4)+2*'diff(y(x),x,2)+y=0;}\\
 \texttt{ode2(F,y(x),x);}\\
 Ответ: \\
+Таким образом возможностей wxMaxima не хватает.\\
+Решим с помощью wolframAplha и получим ответ:
+$$y(x) = c_3 \sin{x}+c_4 x \sin{x}+c_1 \cos{x}+c_2 x \cos{x}$$\\
 %%%%%%%%%%%%%%%
 Пример 3. Запишем уравнение как F: $y''+y=x\sin(x) $\\
 \texttt{F: 'diff(y(x),x,2)+'diff(y(x),x)=x*sin(x);}\\
 \texttt{ode2(F,y(x),x);}\\
-Ответ: 
+Ответ: \[\operatorname{y}(x)=-\frac{\left( x+1\right) \,\cos{(x)}+\left( x-2\right) \,\sin{(x)}}{2}+\mathit{\%{}k2}\,{{\%{}e}^{-x}}+\mathit{\%{}k1}\]
 %%%%%%%%%%%%%%% 
 
-\item[2] Найти решение уравнения, удовлетворяющее указанным начальным условиям. Для нахождения решения используем команду \\ \textbf{ic2(ode2(F, y, x), начальные условия)}, где F - наша функция, y - зависимая переменная, x - независимая переменная.
+\item[2] Найти решение уравнения, удовлетворяющее указанным начальным условиям. Для нахождения решения используем команду \\ \textbf{bc2(ode2(F, y, x), начальные условия)}, где F - наша функция, y - зависимая переменная, x - независимая переменная.
 
 Пример. Запишем уравнение как:
 $$y''+y=2x-\pi, \;\; y(0)=0, \;\; y(\pi)=0$$
-\texttt{F: 'diff(y,x,2)+y=2x-\%pi;}\\
-\texttt{ic2(ode2(F, y, x), x=0, y=0, x=\%pi, y=0);}\\
-Ответ: 
+\texttt{G: 'diff(y,x,2)+y=2*x-\%pi;}\\
+\texttt{bc2(ode2(G, y, x), x=0, y=0, x=\%pi, y=0);}\\
+Ответ: \[y=\mathit{\%{}r1}\,\sin{(x)}+\ensuremath{\pi} \cos{(x)}+2x-\ensuremath{\pi} \]
 %%%%%%%%%%%%%%%
 
+\item[4.] Найти решение уравнения $y''+y'-xy=2x^2$ на отрезке [0.6; 0.9] (n=3) с начальными условиями: $y'(0.6)=0.57, y(0.9)-0.95y'(0.9)=3$\\
+Вводим обозначения и задаем значения переменных:\\
+\texttt{p(x):=1\$ q(x):=-x\$ f(x):=2*x\^{}2\$ \\
+alfa1:-1\$ alfa2:0\$ ac:0.57\$ bc:3\$\\
+beta1:1\$ beta2:-0.95\$\\
+a1:0.4\$ b1:0.7\$;}\\
+Разбиваем отрезок [a, b] на равные части с шагом $h=0.1, n=3$.\\
+\texttt{n:3\$ h:0.1\$;}\\
+Формируем список, содержащий все точки отрезка:\\
+\texttt{x:makelist (a1+(k-1)*h,k,1,n+1);}\\
+\[[0.4,0.5,0.6000000000000001,0.7000000000000001]\]\\
+%%%%%%%%%%%%%%%
+Формируем пустую квадратную матрицу \emph{a} размера \emph{n+1}:\\
+\texttt{a:genmatrix(lambda([i,j],0),n+1,n+1);}\\
+$$\begin{pmatrix}
+0 & 0 & 0 & 0\\
+0 & 0 & 0 & 0\\
+0 & 0 & 0 & 0\\
+0 & 0 & 0 & 0
+\end{pmatrix}$$
+%%%%%%%%%%%%%%%
+Теперь заполним матрицу \emph{a} по формулам:\\
+\(a_{k,k}=h^2q_{k}-hp_{k}+1,
+a_{k,k+1}=hp_{k}-2,
+a_{k,k+2}=1, k=1, n-1,\) \\
+\(a_{n,1}=\alpha_{1}h-\alpha_{2},
+a_{n,2}=\alpha_{2}, a_{n+1,n}=-\beta_{2},
+a_{n+1,n+1}=\beta_{1}h+\beta_{2},\) \\
+\(k=n,n+1.\)\\
+Для заполнения коэффициентами первых двух уравнений системы воспользуемся циклом с параметром:\\
+\texttt{for i:1 thru n-1 do for j:1 thru n+1 do\\
+(if i=j then a[i,j]:h*h*q(x[i])-h*p(x[i])+1\\
+else if j=i+1 then a[i,j]:h*p(x[i])-2\\
+else if j=i+2 then a[i,j]:1 else 0);}\\
+\(\mathit{done}\mbox{}\)\\
+%%%%%%%%%%%%%%%
+В двух последних уравнениях поменяем значения некоторых элементов с помощью оператора присваивания:\\
+\texttt{a[n,1]:alfa1*h-alfa2\$ a[n,2]:alfa2\$ \\
+a[n+1,n]:-beta2\$ a[n+1,n+1]:beta1*h+beta2\$;}\\
+Теперь заполним столбец свободных членов:\\
+\texttt{b:makelist(if k\ensuremath{<}=3 then h\^{}2*f(x[k])\\
+else 0,k,1,n+1)\$ \\
+b[n]:h*ac\$ b[n+1]:h*bc\$;}\\
+Выведем полученные матрицы на экран:\\
+\texttt{b;}\\
+\[[0.003200000000000001,0.005000000000000001,0.007200000000000003,0]\] \\
+%%%%%%%%%%%%%%%
+\texttt{a;}\\
+$$\begin{pmatrix}
+0.896 & -1.9 & 1 & 0\\
+0 & 0.895 & -1.9 & 1\\
+-0.1 & 0 & 0 & 0\\
+0 & 0 & 0.95 & -0.85
+\end{pmatrix}$$
+%%%%%%%%%%%%%%%
+Получили систему линейных уравнений, записанную в матричном виде \(ay=b\), где \(y\)-искомое решение. Найдем его матричным способом:\\
+\texttt{invert(a).b;}\\
+$$\begin{pmatrix}
+-0.07200000000000007\\
+-0.09801786176031834\\
+-0.1185219373446047\\
+-0.1324656946792641
+\end{pmatrix}$$\\
+%%%%%%%%%%%%%%%
 \item[5.] Найти решение системы дифференциальных уравнений и исследовать особые точки. Начертить на фазовой плоскости траектории системы.\\
-\(\left\{
+$$
+\left\{
 \begin{array}{l}
 x'=3x-2y \\
 y'=4y-6x
-\end{array} \right. \)\\
-Запишем первое уравнение как \(F1\), а второе как \(F2\)\\
+\end{array} \right. 
+$$\\
+Запишем первое уравнение как $F1$, а второе как $F2$\\
 \texttt{F1: 3*x(t)=diff(x(t),t)+2*y(t);}\\
-%вставить%
+\[3\operatorname{x}(t)=\frac{d}{dt}\operatorname{x}(t)+2\operatorname{y}(t)\]
 \\
 \texttt{F2: 4*y(t)=diff(y(t),t)-6*x(t);}\\
-%вставить%
+\[4\operatorname{y}(t)=\frac{d}{dt}\operatorname{y}(t)-6\operatorname{x}(t)\]
 %%%%%%%%%%%%%%%
 Для решения системы дифференциальных уравнений воспользуемся выражением:\\
-\texttt{desolve([f1,f2],[x(t),y(t)]);}\\
-%вставить%\\\\
+\texttt{desolve([F1,F2],[x(t),y(t)]);}\\
+\[\operatorname{x}(t)={{e}^{\frac{7t}{2}}}\,\left( \frac{\left( 7\operatorname{x}(0)+2\left( -2\operatorname{y}(0)-4\operatorname{x}(0)\right) \right) \,\sin{\left( \frac{\sqrt{47}t}{2}\right) }}{\sqrt{47}}+\operatorname{x}(0)\,\cos{\left( \frac{\sqrt{47}t}{2}\right) }\right) \]
+\[\operatorname{y}(t)={{e}^{\frac{7t}{2}}}\,\left( \frac{\left( 2\left( 6\operatorname{x}(0)-3\operatorname{y}(0)\right) +7\operatorname{y}(0)\right) \,\sin{\left( \frac{\sqrt{47}t}{2}\right) }}{\sqrt{47}}+\operatorname{y}(0)\,\cos{\left( \frac{\sqrt{47}t}{2}\right) }\right) \]
 %%%%%%%%%%%%%%%
 Составим характеристическое уравнение и найдем его корни. Для этого зададим матрицу.\\
 \texttt{matrix([3-lambda,-2], [-6,4-lambda]);}\\
-%вставить%\\
+$$\begin{pmatrix}
+3-\lambda & -2\\
+-6 & 4-\lambda
+\end{pmatrix}$$\\
 %%%%%%%%%%%%%%%}
 Вычислим определитель матрицы и найдем собственные значения матрицы.\\
 \texttt{determinant(\%);}\\
-%вставить%\\
+$$(3-\lambda)(4-\lambda)-12$$\\
+\texttt{solve([(3-lambda)*(4-lambda)-12=0],[lambda]);}\\
+$$[\lambda=0, \lambda=7]$$
 %%%%%%%%%%%%%%%
 Задаем команду для построения поля направлений:\\
-\texttt{load("plotdf")\$;}\\
+\texttt{	}\\
 \texttt{plotdf([3*x-2*y, 4*y-6*x],[x,y],}
 
 \texttt{[tstep,0.01],[x,-10,10],[y,-10,10],}
 
-\texttt{[direction,forward],[nsteps,300])\$;
+\texttt{[direction,forward],[nsteps,300]);
 \begin{figure}[h]
-%\includegraphics[width=0.5\textwidth]{trac}
+\begin{center}\includegraphics[width=0.5\textwidth]{de5}\end{center}	
 \end{figure}\\}
-Точка покоя системы - точка НАЙТИ. Так как произведение корней характеристического уравнения \(<0\) \((lambda_{1}\cdot lambda_{2}<0)\), то положение равновесия системы - седло (рисунок).\\
+Так как корни характеристического уравнения это действительные положительные числа, то точка покоя неустойчива и называется неустойчивым узлом(рисунок).\\
 \\
 \\
 \\
