[practice 2nd] added something

--- a/summer_practice_2nd/main.tex
+++ b/summer_practice_2nd/main.tex
@@ -14,37 +14,58 @@
 
 %\usepackage[colorlinks=true]{hyperref}
 
+\newcommand{\toCenter}[1]{\begin{center}#1\par\end{center}}
+\newcommand{\toRight}[1]{\begin{flushright}#1\par\end{flushright}}
+\newcommand{\toLeft}[1]{\begin{flushleft}#1\par\end{flushleft}}
+
+
 \begin{document}
+\thispagestyle{empty} 
+\centerline{Министерство образования и науки Российской Федерации} 
+\centerline{ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ}
+\centerline{ОБРАЗОВАТЕЛЬНОЕ УЧРЕЖДЕНИЕ} 
+\centerline{ВЫСШЕГО ОБРАЗОВАНИЯ}
+\centerline{«САРАТОВСКИЙ НАЦИОНАЛЬНЫЙ ИССЛЕДОВАТЕЛЬСКИЙ} 
+\centerline{ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ}
+\centerline{ИМЕНИ Н.Г. ЧЕРНЫШЕВСКОГО»}
+\medskip%большие промежутки
+\toLeft{Кафедра дифференциальных уравнений и прикладной математики}
 
-\chair{дифференциальных уравнений и прикладной математики}
-\worktitle{}
-\course{2}
+\begin{center}%центрирование текста
+\textbf{Отчет по учебной практике}
+\medskip
+\end{center}
 
-\group{213}
-
-
-
-
-\chtitle{д.ф-м.н., доцент} 
-\chname{}  
-%\patitle{} 
-%\paname{}
-%\term{} 
+\toLeft{студента 2 курса 213 группы}
+\toLeft{Направления 01.03.02 "Прикладная математика и информатика"}
+\toLeft{механико-математического факультета}
+\toLeft{Шарова Александра Вадимовича}
+\medskip
 
 
+\toLeft{Место прохождения практики: кафедра дифференциальных уравнений и прикладной математики}
+\bigskip
 
-\napravlenie{01.03.02 "Прикладная математика и информатика"}
+\toLeft{Сроки прохождения практики: с 1 Июля 2016 г. по 14 июля 2016 г. }
+\vspace{1cm}
 
-\studentName{Шарова Александра Вадимовича}
+\toLeft{Оценка \line(1,0){100}
 
-\practStart{1 Июля 2016}  
-\practFinish{14 Июля 2016} 
+\vspace{1cm}
 
-\satitle{к.ф.-м.н., доцент}
-\saname{В. А. Халова}
+Руководитель практики
 
-\year{2016}  
-\MakeTitle
+к.ф.-м.н., доцент \hspace{2.6cm} \line(1,0){100} \hspace{1.5cm} В. А. Халова
+
+\hspace{6.8cm}подпись, дата
+\bigskip
+
+}
+
+\vfill%заполнитель страницы
+\vfill%заполнитель страницы
+\toCenter{Саратов, 2016}
+%\clearpage 
 
 \setcounter{tocdepth}{1}
 
@@ -54,6 +75,13 @@
 
 Цель данной практики - изучить основы работы в системе компьютерной математике Maxima. 
 
+Maxima — система для работы с символьными и численными выражениями, включающая дифференцирование, интегрирование, разложение в ряд, преобразование Лапласа, обыкновенные дифференциальные уравнения, системы линейных уравнений, многочлены, множества, списки, векторы, матрицы и тензоры. Maxima производит численные расчеты высокой точности, используя точные дроби, целые числа и числа с плавающей точкой произвольной точности. Система позволяет строить графики функций и статистических данных в двух и трех измерениях.
+
+Maxima — потомок Macsyma, легендарой системы компьютерной алгебры, разработанной в начале 60-х в MIT . Это единственная основанная на Macsyma система, все еще публично доступная и имеющая активное сообщество пользователей благодаря своей открытости. Macsyma произвела в свое время переворот в компьютерной алгебре и оказала влияние на многие другие системы, в числе которых Maple и Mathematica.
+
+Работу над Maxima вел Уильям Шелтер с 1982 года и до своей кончины в 2001 году. В 1998 году он получил разрешение на публикацию исходного кода  под лицензией GPL. Выживание Maxima стало возможным только благодаря его усилиям и способностям, мы очень благодарны ему за уделенные проекту время и знания эксперта, которые поддерживали код DOE Macsyma актуальным и качественным. После его кончины была сформирована группа пользователей и разработчиков, ставящая своей целью донести Maxima до широкой аудитории.
+
+Maxima имеет широчайший набор средств для проведения аналитических вычислений, численных вычислений и построения графиков. По набору возможностей система близка к таким коммерческим системам, как Maple и Mathematica. В то же время она обладает высочайшей степенью переносимости: может работать на всех основных современных операционных системах на компьютерах, начиная от наладонных, и вплоть до самых мощных.
 
 \section{Простые вычисления}
 Упростить выражения: № 1.013, № 1.028, № 1.043 [Из сборника задач по математике для поступающих во втузы, под редакцией Сканави М. И.]. Для упрощения выражения воспользуемся командой \textbf{ratsimp(Функция)}.
@@ -99,7 +127,9 @@ $-\frac{\sqrt{r^2+4}-\sqrt{r^2-4}}{\sqrt{r^4-16}|r|^{\frac{1}{3}}-r^2|r|^{\frac{
 
 № 1.043\\
 Упростить выражение:
-$$ \frac{x-1}{x+x^{0.5}+1}:\frac{x^{0.5}+1}{x^{1.5}-1}+\frac{2}{x^{-0.5}}$$
+
+$ \frac{x-1}{x+x^{0.5}+1}:\frac{x^{0.5}+1}{x^{1.5}-1}+\frac{2}{x^{-0.5}}$
+
 \texttt{ratsimp(((x-1)/(x+x\^{}(1/2)+1))/((x\^{}(1/2)+1)/(x\^{}(3/2)-1))+2/(x\^{}(-1/2)));}\\
 Ответ: 
 $x+1$
@@ -223,7 +253,9 @@ $$F=\frac{2x\sin{x}}{\sec{x}-1}$$
 
 %%%%%%%%%%%%%%%
 
-2) Дана функция: $$ s = \sqrt{\frac{t}{2} - sin{\frac{t}{2}}} $$
+№ 901\\
+Найти производную функции:\\
+$$ s = \sqrt{\frac{t}{2} - sin{\frac{t}{2}}} $$
 \texttt{s(t):=sqrt(t/2-sin(t/2))}\\
 \texttt{diff(s(t),t);}\\
 Ответ:
@@ -248,7 +280,7 @@ $$\int\frac{dx}{\sqrt{x+a}+\sqrt{x}}$$
 \texttt{integrate(1/(sqrt(x+a)+sqrt(x)),x);}\\
 
 Ответ: данный интеграл в системе wxMaxima не берётся.
-Посчитаем через wolfram alpha: $$\frac{2(-x^{3/2}+a\sqrt{a+x}+x\sqrt{a+x})}{3a}$$
+Посчитаем через wolfram alpha и получим ответ: $$\frac{2(-x^{3/2}+a\sqrt{a+x}+x\sqrt{a+x})}{3a}$$
 
 %%%%%%%%%%%%%%%
 
@@ -260,18 +292,118 @@ $$\int e^{-\sqrt{x}}dx$$
 
 Ответ: \[-\frac{\left( 2+2\log{(e)}\,\sqrt{x}\right) \,{{\%{}e}^{-\log{(e)}\,\sqrt{x}}}}{{{\log{(e)}}^{2}}}\]
 
-Ответ в системе wolfram: $-2e^{-\sqrt{x}}(\sqrt{x}+1)$
+Ответ в системе wolfram alpha: $-2e^{-\sqrt{x}}(\sqrt{x}+1)$
 
 \item[4.] Вычислить площадь, ограниченную линиями: № 1637, № 1652, № 1667 [Из сборника задач по высшей математике, Минорский В. П.]. Для вычисления площади воспользуемся определенным интегралом.
 
+№ 1637
+Вычислить площадь, ограниченную линиями:
+
+$$a^2y^2=x^3(2a-x)$$
+
+Перепишем уравнение в виде: 
+
+$$f(x)=\sqrt{\frac{x^3(2a-x)}{a^2}}, \; \; g(x)=0$$
+
+Запишем в Maxima:
+
+\texttt{f(x):=sqrt((x\^{}3*(2*a-x))/a\^{}2);}\\
+\texttt{g(x):=0;}
+
+Найдем точки пересечения этих графиков:
+
+\texttt{solve(f(x)=g(x),x);}
+
+Таким образом точки пересечения это $x=0, \; x=2$
+
+Посчитаем определённый интеграл между этими двумя точками:
+
+\texttt{integrate(f(x)-g(x), x, 0, 2);}
+
+Таким образом получим ответ:
+
+\[\frac{\frac{\ensuremath{\pi} {{a}^{3}}}{2}-\frac{\sqrt{2a-2}\,\left( 3\sqrt{2}\,{{a}^{2}}+{{2}^{\frac{3}{2}}}a-{{2}^{\frac{7}{2}}}\right) +6{{a}^{3}}\,\operatorname{atan}\left( \frac{\sqrt{2a-2}}{\sqrt{2}}\right) }{6}}{\left| a\right| }\]
+
+№ 1652
+
+Вычислить площадь, ограниченную линиями:
+
+Петлей декартового листа $x^3+y^3-3axy=0$. 
+
+Геометрический параметр $t=\frac{y}{x}$ угловой коэффициент полярного радиуса $OM$, где точка $M(x, y)$ опишет всю петлю кривой при изменении $t$ от $0$ до $+\infty$.
+
+Преобразуя криволинейный интеграл формулы $S=\frac{1}{2}\oint xdy-ydx$ в обыкновенный интеграл с переменной $t$ , получим $S=\frac{1}{2}\oint\limits_{+C} xdy-ydx = \frac{9a^2}{2}\int\limits_{0}^{+\infty}\frac{t^2}{(1+t^3)^2}=\frac{3a^2}{2}\lim\limits_{\beta \to +\infty}\int\limits_{0}^{\beta}(1+t^3)^{-2}d(1+t^3)=\frac{3a^2}{2}\lim\limits_{\beta \to +\infty}\frac{1}{1+t^3}|_{\beta}^{0}$
+
+В итоге, считая последний предел в Maxima получим ответ: $S=\frac{3a^2}{2}$
+
+№ 1667
+
+Вычислить площадь, ограниченную линиями:
+
+Общей части эллипсов $\frac{x^2}{a^2}+\frac{y^2}{b^2}=1$ и $\frac{x^2}{b^2}+\frac{y^2}{a^2}=1$
+
+Заданы уравнения двух одинаковых эллипсов со взаимно перпендикулярными фокальными осями. Найдем точки пересечения эллипсов:
+$$
+\left\{
+\begin{array}{l}
+\frac{x^2}{a^2}+\frac{y^2}{b^2}=1 \\
+\frac{x^2}{b^2}+\frac{y^2}{a^2}=1
+\end{array} \right. 
+$$\\
+
+Преобразуем систему в вид:
+
+$$
+\left\{
+\begin{array}{l}
+b^2x^2+a^2y^2=a^2b^2 \\
+a^2x^2+b^2y^2=a^2b^2
+\end{array} \right. 
+$$\\
+
+Так как $a\ne b$, то $x^2=y^2$, т.е. $\pm x= \pm y$. Получили 4 точки, лежащие на биссектрисах координатных углов. 
+
+Перейдем к полярной системе координат. Используя формулы перехода $x=\rho\cos{\phi}, y=\rho\sin{\phi} получим уравнения эллипсов в полярных координатах:$
+
+$\frac{x^2}{a^2}+\frac{y^2}{b^2}=1 \Rightarrow b^2\rho^2\cos^2{\phi}+a^2\rho^2\sin^2{\phi}=a^2b^2, \rho_1^2=\frac{a^2b^2}{b^2\cos^2{\phi}+a^2\sin^2{\phi}};$
+
+$\frac{x^2}{b^2}+\frac{y^2}{a^2}=1 \Rightarrow a^2\rho^2\cos^2{\phi}+b^2\rho^2\sin^2{\phi}=b^2a^2, \rho_2^2=\frac{a^2b^2}{a^2\cos^2{\phi}+b^2\sin^2{\phi}};$
+
+Учитывая симметрию полученной области относительно координатных осей, вычислим сначала площадь ее четвертой части. Она равна сумме площадей $S_1$ и $S_2$, разделённых лучом $\phi=\frac{\pi}{4}$. Исходя из симметрии задачи, площади $S_1$ и $S_2$ должны быть равны. 
+
+Убедимся в этом, вычислив каждую из них в отдельности:
+
+$S_2=\frac{1}{2}\int\limits_{0}^{\frac{\pi}{4}} \rho_2^2d\phi$
+и
+$S_1=\frac{a^2b^2}{2}\int\limits_{\frac{\pi}{4}}^{\frac{\pi}{2}} \rho_1^2d\phi$
+
+Произведём вычисления в системе Maxima и получим : 
+
+$$S_2=\frac{ab}{2}\arctg{\frac{b}{a}} \; S_1=\frac{ab}{2}\arctg{\frac{b}{a}}$$
+
+Площади таким образом равны. Теперь найдем площадь общей части эллипсов
+
+$$S=4(S_1+S_2)=4ab\arctg{\frac{b}{a}}$$
+
+Ответ: $$S=4(S_1+S_2)=4ab\arctg{\frac{b}{a}}$$
+
+\newpage
+Перепишем уравнения в виде:
+
+$$f(x)=\sqrt{(1-\frac{x^2}{a^2})b^2}, \;\; g(x)=\sqrt{(1-\frac{x^2}{b^2})a^2 }$$
 
 \item[5.] Определить объем тела, образованного вращением фигуры, ограниченной линиями:\\
 
 № 1681 \\
 $y = \sin{x}$(одной полуволной), $y=0$ вокруг оси $Ox$.
 
-\end{itemize}
+Для нахождения объема тела, образованного вращением фигуры вокруг оси $Oy$ воспользуемся определённым интегралом $\int\limits_{y_1}^{y_1} \pi \phi^2(y)dy$, где $x=\phi(y)$ наша функция и $y_1=0$, $y_2=2\pi$.
 
+\texttt{\%pi*integrate(sin(x),x,0,2*\%pi);}
+
+Ответ: $0$
+
+\end{itemize}
 
 \newpage
 \section{Решение дифференциальных уравнений}
@@ -310,6 +442,144 @@ $$y''+y=2x-\pi, \;\; y(0)=0, \;\; y(\pi)=0$$
 \texttt{bc2(ode2(G, y, x), x=0, y=0, x=\%pi, y=0);}\\
 Ответ: \[y=\mathit{\%{}r1}\,\sin{(x)}+\ensuremath{\pi} \cos{(x)}+2x-\ensuremath{\pi} \]
 %%%%%%%%%%%%%%%
+
+\item[3] Решить задачу Коши \(y'=y-x, y(0)=1.5\) на отрезке [0,1] с шагом h методами Эйлера, Эйлера-Коши, Рунге-Кутты.
+
+Пример. Метод Эйлера. \\
+Зададим концы отрезка, на котором будем искать решение, и шаг:\\
+\texttt{a:0\$b:0.8\$ h:0.2\$;}
+
+Найдем количество точек разбиения отрезка с шагом h :\\
+\texttt{n:1+floor((b-a)/h)\$;}
+
+Сформируем два пустых одномерных массива размера \(n+1\) для хранения значения координат точек [x, y] искомого решения:\\
+\texttt{x1:make\_array(flonum, n+1)\$}\\
+\texttt{y1:make\_array(flonum, n+1)\$;}
+
+Зададим начальное условие:\\
+\texttt{x1[0]:a\$ x1[1]:a+h\$y1[0]:1.5\$;}
+
+Заполним массив x1 значениями, начиная с 0.2 до 1 с шагом h.
+Для этого используем цикл с параметром.\\
+\texttt{for i:2 thru n step 1 do (x1[i]:x1[i -1]+h)\$;}
+
+Используя расчетную формулу Эйлера, заполним массив y1:\\
+\texttt{for i:1 thru n step 1 do\\
+(y1[i]:float(y1[i-1]+h*(y1[i-1]-x1[i-1])))\$;}
+
+Выведем полученное решение на экран:\\
+\texttt{for i:0 thru n step 1 do
+(display(x1[i]), display(y1[i]));}
+\begin{flushleft}
+\(\displaystyle
+{{\mathit{x1}}_{0}}=0\) \\
+\(
+{{\mathit{y1}}_{0}}=1.5\) \\
+\(
+{{\mathit{x1}}_{1}}=0.2\) \\
+\(
+{{\mathit{y1}}_{1}}=1.8\) \\
+\(
+{{\mathit{x1}}_{2}}=0.4\) \\
+\(
+{{\mathit{y1}}_{2}}=2.12\) \\
+\(
+{{\mathit{x1}}_{3}}=0.6000000000000001\)\\
+\({{\mathit{y1}}_{3}}=2.464\)\\
+\({{\mathit{x1}}_{4}}=0.8\) \\
+\({{\mathit{y1}}_{4}}=2.8368\) \\
+\({{\mathit{x1}}_{5}}=1.0\) \\
+\({{\mathit{y1}}_{5}}=3.244160000000001\mbox{}\)\\
+\end{flushleft}
+Дифференциальное уравнение запомним под именем eq1:\\
+\texttt{eq1: 'diff(y(t),t)=y(t)-t;}\\
+\(\frac{d}{dt}\operatorname{y}(t)=\operatorname{y}(t)-t\mbox{}
+\)\\
+%%%%%%%%%%%%%%%
+Задаем начальное условие:\\
+\texttt{atvalue(y(t),t=0, 1.5);}\\
+\emph{1.5}
+
+%%%%%%%%%%%%%%%
+Находим точное решение задачи Коши:\\
+\texttt{desolve(eq1,y(t));}
+
+\(rat: replaced -1.5\) \(by -3/2 = -1.5\)\\
+\(\operatorname{y}(t)=\frac{{e^{t}}}{2}+t+1\mbox{}
+\)\\
+%%%%%%%%%%%%%%%
+Вычислим значения функции в точках отрезка [0,1] с шагом h=0.2 \\
+\texttt{for i:0 thru n do (z1[i]:\%e\^{}x1[i]/2+x1[i]+1, display(z1[i]));}\\
+\(\displaystyle
+{{\mathit{z1}}_{0}}=\frac{3}{2}\)\\\(
+{{\mathit{z1}}_{1}}=1.810701379080085\)\\\(
+{{\mathit{z1}}_{2}}=2.145912348820635\)\\\(
+{{\mathit{z1}}_{3}}=2.511059400195255\)\\\(
+{{\mathit{z1}}_{4}}=2.912770464246234\)\\\(
+{{\mathit{z1}}_{5}}=3.359140914229522\mbox{}\)
+
+Найдем величину абсолютной погрешности:\\
+\texttt{for i:1 thru n do
+(display(abs(z1[i]-y1[i])));}\\
+\(\displaystyle
+\left| 0.01070137908008495\right| =0.01070137908008495\)\\\(\left| 0.02591234882063498\right| =0.02591234882063498\)\\\(\left| 0.04705940019525423\right| =0.04705940019525423\)\\\(\left| 0.07597046424623333\right| =0.07597046424623333\)\\\(\left| 0.1149809142295215\right| =0.1149809142295215\mbox{}\)\\
+
+%%%%%%%%%%%%%%%
+Метод Эйлера-Коши.\\
+Для решения приведенной задачи Коши сформируем еще 3 пустых массива x2, y2 и вспомогательный массив z.\\
+\texttt{x2:make\_array(flonum, n+1)\$\\
+z:make\_array(flonum, n+1)\$\\
+y2:make\_array(flonum, n+1)\$;}\\
+Зададим начальное условие:\\
+\texttt{x2[0]:a\$x2[1]:a+h\$y2[0]:1.5\$z[0]:1.5\$;}\\
+Заполним массив x2 значениями, начиная с 0.2 до 1 с шагом h. Для этого используем цикл с параметром.\\
+\texttt{for i:2 thru n step 1 do (x2[i]:x2[i-1]+h)\$;}\\
+Теперь воспользуемся расчетной формулой Коши-Эйлера и найдем решение:\\
+\texttt{for i:1 thru n step 1 do(z[i]:float(y2[i-1]+\\
+    +h*(y2[i-1]-x2[i-1])),y2[i]:float(y2[i-1]+\\
+        +h*(y2[i-1]-x2[i-1]+z[i]-x2[i])/2))\$;}\\
+Выведем найденное решение на экран:\\
+\texttt{for i:0 thru n step 1 do (display(x2[i]),
+display(y2[i]));}\\
+\(\displaystyle
+{{\mathit{x2}}_{0}}=0\)\\
+\({{\mathit{y2}}_{0}}=1.5\)\\
+\({{\mathit{x2}}_{1}}=0.2\)\\
+\({{\mathit{y2}}_{1}}=1.81\)\\
+\({{\mathit{x2}}_{2}}=0.4\)\\
+\({{\mathit{y2}}_{2}}=2.1442\)\\
+\({{\mathit{x2}}_{3}}=0.6000000000000001\)\\
+\({{\mathit{y2}}_{3}}=2.507924\)\\
+\({{\mathit{x2}}_{4}}=0.8\)\\
+\({{\mathit{y2}}_{4}}=2.90766728\)\\
+\({{\mathit{x2}}_{5}}=1.0\)\\
+\({{\mathit{y2}}_{5}}=3.3513540816\mbox{}\)\\
+%%%%%%%%%%%%%%%
+Найдем величину абсолютной погрешности:\\
+\texttt{for i:1 thru n do (display(abs(z1[i]-y2[i])));}\\
+\(\displaystyle
+\left| 7.013790800849407{{10}^{-4}}\right| =7.013790800849407{{10}^{-4}}\)\\
+\(\left| 0.001712348820634979\right| =0.001712348820634979\)\\
+\(\left| 0.003135400195254601\right| =0.003135400195254601\)\\
+\(\left| 0.005103184246233905\right| =0.005103184246233905\)\\
+\(\left| 0.007786832629522067\right| =0.007786832629522067\mbox{}\)\\
+%%%%%%%%%%%%%%%
+Заметим, что метод Коши-Эйлера дает более точный результат, чем метод Эйлера. Максимальная погрешность вычислений составляет 0.7\%.\\
+
+Метод Рунге-Кутты.\\
+В системе \emph{Maxima} для нахождения численного решения задачи Коши методом Рунге-Кутта (четвертого порядка точности) есть встроенная функция \textbf{rk}. Для того, чтобы она стала активной, требуется подключить пакет \textbf{dynamics} с помощью команды:\\
+\texttt{load("dynamics")\$;}\\
+Теперь задаем команду для нахождения решения:\\
+\texttt{sol: rk(y-x, y, 1.5, [x, 0, 1, 0.2]);}\\
+\([0.0,1.5],\)\\
+\([0.2,1.8107],\)\\
+\([0.4,2.14590898],\)\\
+\([0.6000000000000001,2.511053228172],\)\\
+\([0.8,2.91276041288928],\)\\
+\([1.0,3.359125568302967]\mbox{}
+\)\\
+%%%%%%%%%%%%%%%
+Сделаем вывод, что метод Эйлера дает самое плохое приближение к точному решению задачи Коши.\\
 
 \item[4.] Найти решение уравнения $y''+y'-xy=2x^2$ на отрезке [0.6; 0.9] (n=3) с начальными условиями: $y'(0.6)=0.57, y(0.9)-0.95y'(0.9)=3$\\
 Вводим обозначения и задаем значения переменных:\\
@@ -419,9 +689,7 @@ $$[\lambda=0, \lambda=7]$$
 \begin{center}\includegraphics[width=0.5\textwidth]{de5}\end{center}	
 \end{figure}\\}
 Так как корни характеристического уравнения это действительные положительные числа, то точка покоя неустойчива и называется неустойчивым узлом(рисунок).\\
-\\
-\\
-\\
+
 \item[6.] Реализация метода сеток для дифференциальных уравнений в частных производных.\\
 Пример 1. \\
 \( \left\{
@@ -453,13 +721,20 @@ u(0,t)=u(m,t)=0.
 Теперь выполняем построение:\\
 \texttt{plot3d(f, [x,1,m], [y,1,n], [plot\_format, gnuplot])\$;}
 \begin{figure}[h]
-%\includegraphics[width=0.7\textwidth]{setka}
+\begin{center}
+\includegraphics[width=0.7\textwidth]{plot_two}
+\end{center}
 \end{figure}\\
 \end{itemize}
 
 \section*{ЗАКЛЮЧЕНИЕ}
 \addcontentsline{toc}{section}{ЗАКЛЮЧЕНИЕ}
-will be added 
+В результате работы я познакомился с системой компьютерной алгебры Maxima. В ходе работы была использована графическая оболочка wxMaxima, которая очень сильно облегчила выполнение данных мне заданий.
+
+Во время прохождения практики я получил новый опыт работы с системами компьтерной алгебры и открыл для себя бесплатный аналог Wolfram Mathematica. Значительных трудностей в переходе от отдой системы к другой не возникло. 
+
+Maxima очень гибкий инструмент, который предоставляет очень широкий набор средств и доступен под множество операционных систем. Мне очень понравилась возможность копирования решения из среды wxMaxima прямо в \LaTeX. 
+
 
 
 \section*{СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
