[practice 2nd] rewrited references

--- a/summer_practice_2nd/main.tex
+++ b/summer_practice_2nd/main.tex
@@ -735,17 +735,15 @@ u(0,t)=u(m,t)=0.
 
 Maxima очень гибкий инструмент, который предоставляет очень широкий набор средств и доступен под множество операционных систем. Мне очень понравилась возможность копирования решения из среды wxMaxima прямо в \LaTeX. 
 
-
-
 \section*{СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
 \addcontentsline{toc}{section}{СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
 \begin{itemize}
-\item[1] Ильин В. А., Позняк Э. Г. Линейная алгебра. М. : Наука, 1984. 294с.
-\item[2] Берсенев С. М., Иванов И. О. О вычислительных схемах метода регуляризации  // Журн. вычисл. мат. и мат. физ. 1984. Т. 24, № 9. 1402–1405c. 
-\item[3] Фомин А. Е. О компонентах групп // Исследования по теории групп: сб. науч. тр. Свердловск, 1984. 136–148c.
-\item[4] Хромов А. П. Конечномерные возмущения вольтерровых операторов: дис. ... д-ра физ.-мат. наук. Новосибирск, 1973. 242с.
-\item[5] Губина Т. Н., Андропова Е.В. Решение дифференциальных уравнений в системе компьютерной математике Maxima: Учебное пособие. Елец. 2009. 99с.
-\item[6] Стахин Н. А. Основы работы с системой аналитических вычислений Maxima: Учебное пособие. М. 2008. 86с.
-\item[7] Виноградов И. М. Математическая энциклопедия. М.: Советская энциклопедия. 1977—1985.
+\item[1] Ильин В.А., Позняк Э. Г. Линейная алгебра. М. : Наука, 1984. 294 с.
+\item[2] Берсенев, С.М. О вычислительных схемах метода регуляризации / С.М. Берсенев, И.О. Иванов // Журн. вычисл. мат. и мат. физ. – 1984. – Т. 24, № 9. – С. 1402-1405. 
+\item[3] Фомин А.Е. О компонентах групп // Исследования по теории групп: Сб. науч. тр. Свердловск, 1984. - С.~136--148.
+\item[4] Хромов А.П. Конечномерные возмущения вольтерровых операторов: дис. ... д-ра физ.-мат. наук. Новосибирск, 1973. 242 с.
+\item[5] Губина Т.Н., Андропова Е.В. Решение дифференциальных уравнений в системе компьютерной математике Maxima: Учебное пособие. Елец. 2009. 99 с.
+\item[6] Стахин Н.А. Основы работы с системой аналитических вычислений Maxima: Учебное пособие. М. 2008. 86 с.
+\item[7] Виноградов И.М. Математическая энциклопедия. Том 1. М.: Советская энциклопедия. 1977—1985. 576 с.
 \end{itemize}
 \end{document}
